--- a/index.html
+++ b/index.html
@@ -145,26 +145,11 @@
                 <h1>SAVEIRO CROSS </h1>
 
                 <br>
-                <p><span>Especialidades:</span> <br> Psicanálise Clínica, Florais de Saint Germain, Constelação
-                    Familiar, Neuropsicologia, Acupuntura, Radiestesia, Psicoterapia Holística, Auriculoterapia, Florais
-                    de Bach, Terapias Orientais.</p>
+                <p><span>TESTE:</span> TESTE</p>
                 <br>
-                <p>Mestre e Especialista em Psicanálise Aplicada na Educação e Saúde, Especialista em Planejamento e
-                    Gestão, Docente Universitário, Diretor Presidente da CIPS - Clínica Integrada de Psicanálise e da
-                    Saúde, Psicanalista Clínico, Acupunturista e Terapeuta Floral.</p>
+                
                 <br>
-                <p><span>Vida Acadêmica:</span>
-                    <br>
-
-                    UEPB - Universidade Estadual da Paraíba
-
-                    UNIDERC - União de Instituições para o Desenvolvimento Educacional Religioso e Cultural
-
-                    UPE - Universidade de Pernambuco
-
-                    Faculdade Anchieta
-
-                    SBP - Sociedade Brasileira de Psicanálise
+                <p>TESTE
                 </p>
                 <a href="#profissionais" class="btn">COMPRAR BILHETE</a>
 
@@ -209,19 +194,18 @@
 
                 <h3>Links Rápidos</h3>
                 <a href="#home">Home</a>
-                <a href="#features">Especialidades</a>
-                <a href="#about">Sobre</a>
-                <a href="#review">Profissionais</a>
-                <a href="#endereco">Endereço</a>
+            <a href="#about">Sobre</a>
+            <a href="#profissionais">Sorteios</a>
+            <a href="#endereco">FAQ</a>
 
             </div>
 
             <div class="box">
 
                 <h3>Nossas Redes </h3>
-                <a href="https://api.whatsapp.com/send/?phone=5581973037762&text&app_absent=0">Whatsapp</a>
-                <a href="https://www.facebook.com/ronaldomenezespsicanalistaclinico">Facebook</a>
-                <a href="https://www.instagram.com/cips.psicanalise/"> Instagram</a>
+                <a href="#">Whatsapp</a>
+                <a href="#">Facebook</a>
+                <a href="#"> Instagram</a>
 
 
 
@@ -233,15 +217,14 @@
                 <h3> Contato </h3>
                 <div class="info">
                     <div class="fas fa-phone"></div>
-                    <p>(81) 9 7303-7762</p>
+                    <p>#</p>
                 </div>
 
 
 
                 <div class="info">
                     <div class=" fas fa-map-marker-alt"></div>
-                    <p> R.Lourdes Casé Porto, 51 - 14º andar - Sala 1404 <br> Maurício de Nassau - Ed. Times Bussines
-                        Center - CARUARU-PE <br> CEP - 55012075</p>
+                    <p> #</p>
                 </div>
 
 
