--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 
@@ -130,12 +130,6 @@
 
     <!-- pricing section starts  -->
 
-    <div class="content-video">
-       
-        <iframe width="960" height="625" src="imgs/videoGarota.mp4" ></iframe>
-       
-    </div>
-
 
     <section class="profissionais" id="profissionais">
         <h1 class="heading"> SORTEIOS EM ANDAMENTO </h1>
@@ -151,7 +145,7 @@
                 <br>
                 <p>TESTE
                 </p>
-                <a href="#profissionais" class="btn">COMPRAR BILHETE</a>
+                <a href="sorteio.html" class="btn">PARTICIPAR</a>
 
             </div>
         </div>
