--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <section class="profissionais" id="profissionais">
         <h1 class="heading"> SORTEIOS EM ANDAMENTO </h1>
         <div class="box-container">
-          
+          <img src="imgs/imgSaveiro/10.jpg" alt="saveiro">
             <div class="box-content">
                 <h1>SAVEIRO CROSS </h1>
 
