--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
             </div>
         </div>
 
+        <div class="box1">
+       
+            <img src="imgs/001.png" class="d-flex w-100" alt="...">
+            <img src="imgs/002.png" class="d-flex w-100" alt="...">
+            <img src="imgs/003.png" class="d-flex w-100" alt="...">
+      </div>
+
     </div>
 
         </div>
