--- a/index.html
+++ b/index.html
@@ -57,25 +57,25 @@
                     aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2"
                     aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3"
+                    aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner " >
                 <div class="carousel-item active " data-bs-interval="3000">
                     <img src="imgs/c.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-
-                    </div>
+                    <div class="carousel-caption d-none d-md-block"> </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="2000">
                     <img src="imgs/a.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-
-                    </div>
+                    <div class="carousel-caption d-none d-md-block"> </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imgs/b.png" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
-
-                    </div>
+                    <img src="imgs/b.png" class="d-block w-100" data-bs-interval="3000">
+                    <div class="carousel-caption d-none d-md-block"></div>
+                </div>
+                <div class="carousel-item">
+                    <img src="imgs/mainslide.jpeg" class="d-block w-100" data-bs-interval="2000">
+                    <div class="carousel-caption d-none d-md-block"></div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
