--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
             <div class="carousel-inner " >
                 <div class="carousel-item active " data-bs-interval="3000">
-                    <img src="imgs/c.png" class="d-block w-100" alt="...">
+                    <img src="imgs/mainslide.jpeg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block"> </div>
                 </div>
                 <div class="carousel-item " data-bs-interval="2000">
@@ -74,7 +74,7 @@
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
                 <div class="carousel-item">
-                    <img src="imgs/mainslide.jpeg" class="d-block w-100" data-bs-interval="2000">
+                    <img src="imgs/c.png" class="d-block w-100" data-bs-interval="2000">
                     <div class="carousel-caption d-none d-md-block"></div>
                 </div>
             </div>
