--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <nav class="navbar">
             <a href="#home">Home</a>
-            <a href="#about">Quem Somos</a>
+            <a href="quemsomos.html">Quem Somos</a>
             <a href="#e-books">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
 
