--- a/quemsomos.html
+++ b/quemsomos.html
@@ -18,6 +18,7 @@
 
     <!-- custom css file link  -->
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/quemsomos.css">
 
 </head>
 
