--- a/quemsomos.html
+++ b/quemsomos.html
@@ -160,7 +160,7 @@
         <h1 class="heading">NOSSA EQUIPE GARAGEM <span>21</span> </h1>
         <div class="column">
             <div class="image">
-                <img src="imgs/equipe04.jpeg" alt="" width="1264" height="1280">            </div>
+                <img src="imgs/equipe04.jpeg" alt="" >            </div>
             <div class="content">
                 <h3>Nosso Sorteios</h3>
                 <p> A <span> GARAGEM 21</span>, realiza sorteios atráves da LOTERIA FEDERAL, levando a nossos parceiros
