--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="quemsomos.html">Quem Somos</a>
-            <a href="#e-books">Comprar E-Books</a>
+            <a href="comprarebook.html">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
 
 
@@ -175,7 +175,7 @@
                 </p>
 
                 <div class="buttons">
-                    <a href="#profissionais" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
+                    <a href="comprarebook.html" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
 
                 </div>
 
