--- a/quemsomos.html
+++ b/quemsomos.html
@@ -33,7 +33,7 @@
         <label for="menu-bar" class="fas fa-bars"></label>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="#about">Quem Somos</a>
             <a href="#e-books">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
