--- a/quemsomos.html
+++ b/quemsomos.html
@@ -61,19 +61,19 @@
             </div>
             <div class="carousel-inner " >
                 <div class="carousel-item active " data-bs-interval="3000">
-                    <img src="imgs/equipe01.jpeg" alt="..." width="1280" height="853" class="d-block w-100">
+                    <img src="imgs/equipe01.jpeg" alt="..."  class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
 
                     </div>
               </div>
                 <div class="carousel-item " data-bs-interval="2000">
-                    <img src="imgs/equipe02.jpeg" alt="..." width="1280" height="853" class="d-block w-100">
+                    <img src="imgs/equipe02.jpeg" alt="..."  class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
 
                     </div>
               </div>
                 <div class="carousel-item">
-                    <img src="imgs/equipe03.jpeg" alt="..." width="1280" height="853" class="d-block w-100">
+                    <img src="imgs/equipe03.jpeg" alt="..."  class="d-block w-100">
                     <div class="carousel-caption d-none d-md-block">
 
                     </div>
