--- a/comprarebook.html
+++ b/comprarebook.html
@@ -35,7 +35,7 @@
 
         <nav class="navbar">
             <a href="index.html">Home</a>
-            <a href="#about">Quem Somos</a>
+            <a href="quemsomos.html">Quem Somos</a>
             <a href="#e-books">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
 
