--- a/comprarebook.html
+++ b/comprarebook.html
@@ -47,7 +47,7 @@
 
     <!-- header section ends -->
 
-    <iframe src="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-"   height="1000" width="100%" title="Iframe Example"></iframe>
+    <iframe src="https://garagem-21irati-manutencao.lojaintegrada.com.br"   height="1000" width="100%" title="Iframe Example"></iframe>
 
 
 
