--- a/index.html
+++ b/index.html
@@ -159,14 +159,14 @@
         <h1 class="heading">Sobre Os Sorteios Da GARAGEM <span>21</span> </h1>
         <div class="column">
             <div class="image">
-                <img src="imgs/imgSobre.png" alt="">
+                <img src="imgs/fotosobre.png" alt="">
             </div>
             <div class="content">
                 <h3>Nosso Sorteios</h3>
                 <p> A <span> GARAGEM 21</span>, realiza sorteios atráves da LOTERIA FEDERAL, levando a nossos parceiros
                     segurança em cada passo
                     desde a compra a entrega do premio. Toda nosso equipe busca mostrar transparecia e comprometimento.
-                    Buscamos transforma vidas e levar a sorte para todos aqueles que querem e acreditam. Todos nossos
+                    Buscamos transformar vidas e levar a sorte para todos aqueles que querem e acreditam. Todos nossos
                     sorteios são Fiscalizados e autorizado pelo <span>(SECAP)</span>, orgão que fiscaliza
                     e monitora todos os sorteios comerciais no BRASIL. Atráves da Tecnologia e empenho de nossos
                     colaboradores encontramos formas de chegar a todo Brasil, assim
@@ -294,16 +294,16 @@
 
                 <h3>Links Rápidos</h3>
                 <a href="#home">Home</a>
-                <a href="#about">Sobre</a>
-                <a href="#profissionais">Sorteios</a>
-                <a href="#endereco">FAQ</a>
+                <a href="quemsomos.html">Quem somos</a>
+                <a href="comprarebook.html">Comprar E-book</a>
+                <a href="#endereco">Regulamento</a>
 
             </div>
 
             <div class="box">
 
                 <h3>Nossas Redes </h3>
-              <img src="imgs/logoinsta.png" alt="">  <a href="https://www.instagram.com/garagem.21_/"> Instagram</a>
+                <a href="https://www.instagram.com/garagem.21_/"><img src="imgs/logoinsta.png" alt=""> Instagram</a>
 
 
 
