--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="quemsomos.html">Quem Somos</a>
-            <a href="comprarebook.html">Comprar E-Books</a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
 
 
@@ -175,7 +175,7 @@
                 </p>
 
                 <div class="buttons">
-                    <a href="comprarebook.html" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
+                    <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
 
                 </div>
 
@@ -295,7 +295,7 @@
                 <h3>Links Rápidos</h3>
                 <a href="#home">Home</a>
                 <a href="quemsomos.html">Quem somos</a>
-                <a href="comprarebook.html">Comprar E-book</a>
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
                 <a href="#endereco">Regulamento</a>
 
             </div>
