--- a/quemsomos.html
+++ b/quemsomos.html
@@ -35,7 +35,7 @@
         <nav class="navbar">
             <a href="index.html">Home</a>
             <a href="quemsomos.html">Quem Somos</a>
-            <a href="comprarebook.html">Comprar E-Books</a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
             <a href="#regulamento">Regulamento</a>
 
 
@@ -185,85 +185,9 @@
 
     <!-- about section ends -->
 
-
-    <!-- features section starts  --
-
-    <section class="features" id="especialidades">
-
-        <h1 class="heading"> COMO PARTICIPAR DOS SORTEIOS</h1>
-
-        <div class="box-container">
-
-            <div class="box">
-                <img src="imgs/trevoBG.png" alt="Casal Sentado Conversando">
-                <h3> PASSO 1º </h3>
-                <h4>ESCOLHA O SORTEIO EM ANDAMENTO</h4>
-                <P>Então siga para o passo 2º .</P>
-                <a href="#profissionais" class="btn">VER SORTEIOS</a>
-
-
-            </div>
-
-            <div class="box">
-                <img src="imgs/pagamentoBG.png" alt="Imagem de Acupuntura">
-                <h3>PASSO 2º </h3>
-                <h4>ESCOLHA A FORMA DE PAGAMENTO QUE DESEJA </h4>
-                <P>Pague Então siga para o ultimo passo 3º .</P>
-                <a href="#" class="btn">FORMAS DE
-                    PAGAMENTO</a>
-
-            </div>
-
-            <div class="box">
-                <img src="imgs/federal.jpg" alt="Mulher Olhando para o Celular">
-                <h3>PASSO 3º </h3>
-                <h4>VERIFIQUE OS SEUS NUMEROS PARA CONCORRER </h4>
-                <p>AGORA SÓ ESPERAR O DIA DO SORTEIO \O/ </p>
-                <a href="https://mpago.la/1PpPT71" class="btn">COMPRAR MEU BILHETE</a>
-            </div>
-        </div>
-
-    </section>
-
-     features section ends -->
-
-    <!-- pricing section starts  --
-
-
-    <section class="profissionais" id="profissionais">
-        <h1 class="heading"> SORTEIOS EM ANDAMENTO </h1>
-        <div class="box-container">
-            <img src="imgs/imgSaveiro/10.jpg" alt="saveiro">
-            <div class="box-content">
-                <h1>SAVEIRO CROSS </h1>
-
-                <br>
-                <p><span>DATA DO SORTEIO:</span> TESTE</p>
-                <br>
-
-
-                <a href="sorteio.html" class="btn">PARTICIPAR</a>
-
-            </div>
-        </div>
-
-
-
-        </div>
-
-
-    </section>
-
-
-
-
-    <- pricing section ends --
-
-    </section>
-
   
 
- footer section starts  -->
+ <!--footer section starts  -->
 
 
     <div class="footer">
@@ -293,10 +217,10 @@
             <div class="box">
 
                 <h3>Links Rápidos</h3>
-                <a href="#home">Home</a>
-                <a href="#about">Sobre</a>
-                <a href="#profissionais">Sorteios</a>
-                <a href="#endereco">FAQ</a>
+                <a href="index.html">Home</a>
+                <a href="quemsomos.html">Quem Somos</a>
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
+                <a href="#endereco">Regulamento</a>
 
             </div>
 
