--- a/quemsomos.html
+++ b/quemsomos.html
@@ -90,16 +90,8 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-
-
-
-
-
-
         <!---MINI BANNERS-->
 
-
-         
         <div class="box">
        
             <div id="carouselExample" class="carousel  slide" data-bs-ride="carousel">
@@ -227,7 +219,7 @@
             <div class="box">
 
                 <h3>Nossas Redes </h3>
-              <img src="imgs/logoinsta.png" alt="">  <a href="https://www.instagram.com/garagem.21_/"> Instagram</a>
+                <a href="https://www.instagram.com/garagem.21_/"><img src="imgs/logoinsta.png" alt=""> Instagram</a>
 
 
 
