--- a/index.html
+++ b/index.html
@@ -174,9 +174,11 @@
                     entregando o premio aos vencedores em qualquer lugar do BRASIL .
                 </p>
 
-                <div class="buttons">
-                    <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
-
+                <div class="buttons" >
+                    <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-" class="btn"> <strong>QUERO MEU E-BOOK</strong></a>
+                </div>
+                <div class="buttons" >
+                    <a href="ficha técnica.pdf" download="true" class="btn"><img class="iconepdf" src="imgs/iconpdf.png" alt="">Especificações</a>
                 </div>
 
             </div>
