--- a/quemsomos.html
+++ b/quemsomos.html
@@ -168,8 +168,11 @@
 
                 <div class="buttons">
                     <a href="comprarebook.html" class="btn"><i class="fas fa-marker-alt"></i> <strong>QUERO MEU E-BOOK</strong></a>
-
                 </div>
+                <div class="buttons">
+                    <a href="ficha técnica.pdf" download="Especificações" class="btn"><img class="iconepdf" src="imgs/iconpdf.png" alt="">Especificações</a>
+                </div>
+
 
             </div>
         </div>
