--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <label for="menu-bar" class="fas fa-bars"></label>
 
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="quemsomos.html">Quem Somos</a>
             <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
-            <a href="#regulamento">Regulamento</a>
+            <a href="regulamento.html">Regulamento</a>
 
 
         </nav>
@@ -178,7 +178,7 @@
                     <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-" class="btn"> <strong>QUERO MEU E-BOOK</strong></a>
                 </div>
                 <div class="buttons" >
-                    <a href="ficha técnica.pdf" download="true" class="btn"><img class="iconepdf" src="imgs/iconpdf.png" alt="">Especificações</a>
+                    <a href="ficha técnica.pdf" download="Especificações" class="btn"><img class="iconepdf" src="imgs/iconpdf.png" alt="">Especificações</a>
                 </div>
 
             </div>
@@ -220,10 +220,10 @@
             <div class="box">
 
                 <h3>Links Rápidos</h3>
-                <a href="#home">Home</a>
+                <a href="index.html">Home</a>
                 <a href="quemsomos.html">Quem somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
-                <a href="#endereco">Regulamento</a>
+                <a href="regulamento.html">Regulamento</a>
 
             </div>
 
