--- a/quemsomos.html
+++ b/quemsomos.html
@@ -36,7 +36,7 @@
             <a href="index.html">Home</a>
             <a href="quemsomos.html">Quem Somos</a>
             <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
-            <a href="#regulamento">Regulamento</a>
+            <a href="regulamento.html">Regulamento</a>
 
 
         </nav>
@@ -215,7 +215,7 @@
                 <a href="index.html">Home</a>
                 <a href="quemsomos.html">Quem Somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
-                <a href="#endereco">Regulamento</a>
+                <a href="regulamento.html">Regulamento</a>
 
             </div>
 
