--- a/regulamento.html
+++ b/regulamento.html
@@ -182,7 +182,7 @@ As dúvidas e controvérsias oriundas de reclamações dos consumidores particip
                 <a href="#home">Home</a>
                 <a href="quemsomos.html">Quem somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
-                <a href="#endereco">Regulamento</a>
+                <a href="regulamento.html">Regulamento</a>
 
             </div>
 
