--- a/regulamento.html
+++ b/regulamento.html
@@ -52,8 +52,8 @@
       <div class="container-regulamento">
           <h1>REGULAMENTO</h1>
           <p>
-            REGULAMENTO/PLANO DE OPERAÇÃO DA PROMOÇÃO
-
+           <strong> REGULAMENTO/PLANO DE OPERAÇÃO DA PROMOÇÃO</strong>
+            <br>
             Que tal você de Cross!!
 <BR></BR>            
            
