--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
             <a href="quemsomos.html">Quem Somos</a>
             <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
             <a href="regulamento.html">Regulamento</a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+
 
 
         </nav>
@@ -224,7 +226,8 @@
                 <a href="quemsomos.html">Quem somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
                 <a href="regulamento.html">Regulamento</a>
-
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+                
             </div>
 
             <div class="box">
