--- a/regulamento.html
+++ b/regulamento.html
@@ -37,6 +37,8 @@
             <a href="quemsomos.html">Quem Somos</a>
             <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
             <a href="regulamento.html">Regulamento</a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+
 
 
         </nav>
@@ -183,6 +185,8 @@ As dúvidas e controvérsias oriundas de reclamações dos consumidores particip
                 <a href="quemsomos.html">Quem somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
                 <a href="regulamento.html">Regulamento</a>
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+
 
             </div>
 
