--- a/quemsomos.html
+++ b/quemsomos.html
@@ -37,6 +37,8 @@
             <a href="quemsomos.html">Quem Somos</a>
             <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-Books</a>
             <a href="regulamento.html">Regulamento</a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+
 
 
         </nav>
@@ -216,6 +218,8 @@
                 <a href="quemsomos.html">Quem Somos</a>
                 <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">Comprar E-book</a>
                 <a href="regulamento.html">Regulamento</a>
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/conta/login?next=/conta/index">Minha Conta</a>
+
 
             </div>
 
