--- a/regulamento.html
+++ b/regulamento.html
@@ -125,7 +125,7 @@ As dúvidas e controvérsias oriundas de reclamações dos consumidores particip
         </div>
         <br>
         <br>
-        <h2>OUTROS ARQUIVOS PARA DAOWNLOADS</h2>
+        <h2>OUTROS ARQUIVOS PARA DOWNLOAD </h2>
         <BR></BR>
         <div class="buttons" >
             <a href="PDFs/PDFs/cross.pdf" download="CROSS" class="btn"><img class="iconepdf" src="imgs/iconpdf.png" alt="">CROSS</a>
