--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
                
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="2000">
-                        <img src="imgs/Captura de tela 2022-07-08 154219.png" class="d-flex w-100" alt="...">
+                        <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-"> <img src="imgs/Captura de tela 2022-07-08 154219.png" class="d-flex w-100" alt="..."></a>
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="4000">
-                        <img src="imgs/Captura de tela 2022-07-08 154252.png" class="d-flex w-100" alt="...">
+                        <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">  <img src="imgs/Captura de tela 2022-07-08 154252.png" class="d-flex w-100" alt="..."></a>
                         <div class="carousel-caption d-none d-md-block">
 
                         </div>
@@ -135,9 +135,9 @@
 
         <div class="box1">
        
-            <img src="imgs/001.png" class="d-flex w-100" alt="...">
-            <img src="imgs/002.png" class="d-flex w-100" alt="...">
-            <img src="imgs/003.png" class="d-flex w-100" alt="...">
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-">  <img src="imgs/001.png" class="d-flex w-100" alt="..."></a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-"> <img src="imgs/002.png" class="d-flex w-100" alt="..."></a>
+            <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-"><img src="imgs/003.png" class="d-flex w-100" alt="..."></a>
       </div>
 
     </div>
@@ -161,7 +161,7 @@
         <h1 class="heading">Sobre Os Sorteios Da GARAGEM <span>21</span> </h1>
         <div class="column">
             <div class="image">
-                <img src="imgs/fotosobre.png" alt="">
+                <a href="https://garagem-21irati-manutencao.lojaintegrada.com.br/saveiro-cross-"> <img src="imgs/fotosobre.png" alt=""></a>
             </div>
             <div class="content">
                 <h3>Nosso Sorteios</h3>
